[package]
name = "mlatu-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mlatu-lib = { git = "https://github.com/mlatu-lang/libraries", package="mlatu"}

[dependencies.mlatu]
path = ".."
default-features = false

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
